--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=journal
 server.port=8081
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=journal_db
+spring.data.mongodb.auto-index-creation=true
