Journal and User

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.data.mongodb.uri=mongodb+srv://shivamsinghcoo_db_user:I4IEFDAcMdea3yph@cluster0.mrxmcpt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=journal_db
+
+
+
 spring.application.name=journal
 server.port=8081
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=journal_db
 spring.data.mongodb.auto-index-creation=true
