--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.data.mongodb.database=journal_db
 spring.application.name=journal
 server.port=8081
 spring.data.mongodb.auto-index-creation=true
+spring.main.allow-circular-references=true
