--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.data.mongodb.uri=mongodb+srv://shivamsinghcoo_db_user:I4IEFDAcMdea3yph@cluster0.mrxmcpt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=journal_db
-
-
-
-spring.application.name=journal
-server.port=8081
-spring.data.mongodb.auto-index-creation=true
-spring.main.allow-circular-references=true
+#spring.data.mongodb.uri=mongodb+srv://shivamsinghcoo_db_user:I4IEFDAcMdea3yph@cluster0.mrxmcpt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#spring.data.mongodb.database=journal_db
+#
+#
+#
+#spring.application.name=journal
+#server.port=8081
+#spring.data.mongodb.auto-index-creation=true
+#spring.main.allow-circular-references=true
